# ComputerGraphics

./: CMakeLists.txt  README.md
OpenGLWindow/: CMakeLists.txt
OpenGLWindow/include/: OpenGLWidget.hpp  OpenGLWidgetVariables.hpp  OpenGLWindow.hpp
OpenGLWindow/src/: OpenGLWidget.cpp  OpenGLWindow.cpp
canvas/: CMakeLists.txt
canvas/include/: Canvas.hpp
canvas/src/: Canvas.cpp
lab01/: CMakeLists.txt
lab01/include/: Lab01Widget.hpp  OpenGLWidget.hpp
lab01/src/: Lab01Widget.cpp  OpenGLWidget.cpp  main.cpp
lab02/: CMakeLists.txt
lab02/include/: Lab02MainWindow.hpp  PyramideV8.hpp
lab02/src/: Lab02MainWindow.cpp  PyramideV8.cpp  main.cpp
